# stereo_odometry

./: CMakeLists.txt  README.md  package.xml
include/: featools.h  feature.h  frame.h  map.h  mappoint.h  optimizer.h  tracker.h  tracking.h
src/: featools.cpp  feature.cpp  frame.cpp  map.cpp  mappoint.cpp  node.cpp  optimizer.cpp  tracker.cpp  tracking.cpp
